--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-web": "^0.18.12",
+    "rrule": "^2.7.2",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.71.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "^4.9.4"
   },
   "private": true
