--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@devexpress/dx-react-core": "^4.0.3",
     "@devexpress/dx-react-scheduler": "^4.0.3",
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.3",
+    "@devexpress/dx-scheduler-core": "^4.0.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@expo/webpack-config": "^18.0.1",
